[package]
name = "corkboard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version = "1.0.68", features = ["backtrace"]}
chrono = {version = "0.4.23", features = ["clock"]}
reqwest = {version = "0.11.13", features = ["blocking"]}
roxmltree = "0.16.0"
rusqlite = {version = "0.28.0", features = ["bundled", "chrono"]}
sha2 = "0.10.8"
url = "2.3.1"
